// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-add schematic for dynatrace barista-components should add @angular/platform-browser-dynamic 1`] = `
Object {
  "dependencies": Object {
    "@angular/animations": "^8.2.12",
    "@angular/common": "^8.2.12",
    "@angular/core": "^8.2.12",
    "@angular/platform-browser-dynamic": "^8.2.12",
    "@dynatrace/barista-components": "5.0.0",
    "@dynatrace/barista-fonts": "{{version}}",
    "@dynatrace/barista-icons": "{{version}}",
    "d3-geo": "{{version}}",
    "d3-scale": "{{version}}",
    "d3-shape": "{{version}}",
    "highcharts": "{{version}}",
  },
}
`;

exports[`ng-add schematic for dynatrace barista-components should add all the necessary peer dependencies if no barista or angular components are installed 1`] = `
Object {
  "dependencies": Object {
    "@angular/cdk": "^8.2.3",
    "@angular/common": "^8.2.12",
    "@angular/compiler": "^8.2.12",
    "@angular/core": "^8.2.12",
    "@dynatrace/barista-components": "5.0.0",
    "@dynatrace/barista-fonts": "{{version}}",
    "@dynatrace/barista-icons": "{{version}}",
    "d3-geo": "{{version}}",
    "d3-scale": "{{version}}",
    "d3-shape": "{{version}}",
    "highcharts": "{{version}}",
  },
  "devDependencies": Object {
    "@angular-devkit/build-angular": "^0.803.15",
    "@angular-devkit/build-webpack": "^0.803.15",
    "@angular-devkit/schematics": "^8.3.15",
    "@angular/cli": "^8.3.15",
  },
}
`;

exports[`ng-add schematic for dynatrace barista-components should add barista icons to the angular.json 1`] = `
Object {
  "cli": Object {
    "defaultCollection": "@nrwl/angular",
  },
  "defaultProject": "myapp",
  "projects": Object {
    "myapp": Object {
      "architect": Object {
        "build": Object {
          "builder": "@angular-devkit/build-angular:browser",
          "options": Object {
            "aot": false,
            "assets": Array [
              "apps/myapp/src/favicon.ico",
              "apps/myapp/src/assets",
              Object {
                "glob": "**/*",
                "input": "node_modules/@dynatrace/barista-fonts/fonts/",
                "output": "/fonts",
              },
            ],
            "index": "apps/myapp/src/index.html",
            "main": "apps/myapp/src/main.ts",
            "outputPath": "dist/apps/myapp",
            "polyfills": "apps/myapp/src/polyfills.ts",
            "scripts": Array [],
            "styles": Array [
              "node_modules/@dynatrace/barista-compoents...",
              "apps/myapp/src/styles.scss",
            ],
            "tsConfig": "apps/myapp/tsconfig.app.json",
          },
        },
      },
      "projectType": "application",
      "root": "apps/myapp",
      "sourceRoot": "apps/myapp/src",
    },
    "myapp-e2e": Object {
      "architect": Object {
        "e2e": Object {
          "builder": "@nrwl/cypress:cypress",
          "configurations": Object {
            "production": Object {
              "devServerTarget": "myapp:serve:production",
            },
          },
          "options": Object {
            "cypressConfig": "apps/myapp-e2e/cypress.json",
            "devServerTarget": "myapp:serve",
            "tsConfig": "apps/myapp-e2e/tsconfig.e2e.json",
          },
        },
        "lint": Object {
          "builder": "@angular-devkit/build-angular:tslint",
          "options": Object {
            "exclude": Array [
              "**/node_modules/**",
              "!apps/myapp-e2e/**",
            ],
            "tsConfig": Array [
              "apps/myapp-e2e/tsconfig.e2e.json",
            ],
          },
        },
      },
      "projectType": "application",
      "root": "apps/myapp-e2e",
      "sourceRoot": "apps/myapp-e2e/src",
    },
    "some-lib": Object {
      "architect": Object {
        "lint": Object {
          "builder": "@angular-devkit/build-angular:tslint",
          "options": Object {
            "exclude": Array [
              "**/node_modules/**",
              "!libs/some-lib/**",
            ],
            "tsConfig": Array [
              "libs/some-lib/tsconfig.lib.json",
              "libs/some-lib/tsconfig.spec.json",
            ],
          },
        },
        "test": Object {
          "builder": "@nrwl/jest:jest",
          "options": Object {
            "jestConfig": "libs/some-lib/jest.config.js",
            "setupFile": "libs/some-lib/src/test-setup.ts",
            "tsConfig": "libs/some-lib/tsconfig.spec.json",
          },
        },
      },
      "prefix": "mc",
      "projectType": "library",
      "root": "libs/some-lib",
      "schematics": Object {},
      "sourceRoot": "libs/some-lib/src",
    },
  },
  "version": 1,
}
`;

exports[`ng-add schematic for dynatrace barista-components should add the \`@angular/animations\` package with the same version as the \`@angular/core\` package when specified 1`] = `
Object {
  "dependencies": Object {
    "@angular/animations": "^8.2.12",
    "@angular/cdk": "^8.2.3",
    "@angular/common": "^8.2.12",
    "@angular/compiler": "^8.2.12",
    "@angular/core": "^8.2.12",
    "@angular/platform-browser-dynamic": "^8.2.12",
    "@dynatrace/barista-components": "5.0.0",
    "@dynatrace/barista-fonts": "{{version}}",
    "@dynatrace/barista-icons": "{{version}}",
    "d3-geo": "{{version}}",
    "d3-scale": "{{version}}",
    "d3-shape": "{{version}}",
    "highcharts": "{{version}}",
  },
  "devDependencies": Object {
    "@angular-devkit/build-angular": "^0.803.15",
    "@angular-devkit/build-webpack": "^0.803.15",
    "@angular-devkit/schematics": "^8.3.15",
    "@angular/cli": "^8.3.15",
  },
}
`;

exports[`ng-add schematic for dynatrace barista-components shouldn't add @angular/animations\` package if already installed 1`] = `
Object {
  "dependencies": Object {
    "@angular/animations": "^8.2.12",
    "@angular/common": "^8.2.12",
    "@angular/core": "^8.2.12",
    "@angular/platform-browser-dynamic": "^8.2.12",
    "@dynatrace/barista-components": "5.0.0",
    "@dynatrace/barista-fonts": "{{version}}",
    "@dynatrace/barista-icons": "{{version}}",
    "d3-geo": "{{version}}",
    "d3-scale": "{{version}}",
    "d3-shape": "{{version}}",
    "highcharts": "{{version}}",
  },
}
`;
